<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mitha.mvicall2222.fragment.VerificationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="323dp"
            android:background="@drawable/bg_card"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96">


            <LinearLayout
                android:layout_width="67dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/tipmodal"
                app:layout_constraintBottom_toTopOf="@+id/guideline31"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_judul_otp"
                android:layout_width="166dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:fontFamily="@font/avenirnext_bold"
                android:gravity="center"
                android:text="@string/text_verification2"
                android:textColor="#231640"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline30"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toTopOf="@+id/guideline31" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/btn_rounded"
                android:fontFamily="@font/avenirnext_bold"
                android:text="@string/text_verification"
                android:textAllCaps="false"
                android:textColor="@color/purpleintro"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toBottomOf="@+id/lnTnc"
                app:layout_constraintVertical_bias="0.7" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"
                app:layout_constraintHorizontal_bias="0.852"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toBottomOf="@+id/lnTnc"
                app:layout_constraintVertical_bias="0.529" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.17" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <TextView
                android:id="@+id/textOtp"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/avenirnext_regular"
                android:gravity="center"
                android:lineSpacingExtra="-5dp"
                android:text="@string/text_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toTopOf="@+id/guideline40"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toTopOf="@+id/guideline30" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.34" />

            <com.chaos.view.PinView
                android:id="@+id/pinViewCode"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_pin"
                android:cursorVisible="false"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#222222"
                android:textSize="23dp"
                app:cursorWidth="2dp"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemSpacing="3dp"
                app:itemWidth="35dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_info"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toBottomOf="@+id/textOtp"
                app:lineWidth="2dp" />

            <LinearLayout
                android:id="@+id/lnTnc"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@+id/guideline45"
                app:layout_constraintEnd_toEndOf="@+id/pinViewCode"
                app:layout_constraintStart_toStartOf="@+id/pinViewCode"
                app:layout_constraintTop_toTopOf="@+id/guideline44">

                <TextView
                    android:id="@+id/tvsalah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenirnext_bold"
                    android:text="@string/text_wrong_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tvTnC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenirnext_regular"
                    android:text="@string/text_cannot_otp"
                    android:textColor="@color/grey_868686"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.66" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.77" />

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnext_bold"
                android:textSize="@dimen/_10sdp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/guideline44"
                app:layout_constraintEnd_toStartOf="@+id/guideline42"
                app:layout_constraintStart_toStartOf="@+id/guideline41"
                app:layout_constraintTop_toTopOf="@+id/guideline55" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.59" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>